--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body, html {
 	height: 100% !important;
 }
 h1 {
-	color: #f9f9f9;
+	color: #EEEEEE;
 	font-size: 64px;
 	font-weight: 800;
 	margin-top: 0;
@@ -38,6 +38,7 @@ h5 {
 	font-weight: 700;
 	line-height: 20px;
 }
+
 p {
 	font-family: 'Roboto', sans-serif;
 	font-size: 15px;
@@ -100,7 +101,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	transition: all 0.5s;
 }
 .btn-custom:hover, .btn-custom:focus, .btn-custom.focus, .btn-custom:active, .btn-custom.active {
-	color: #444;
+	color: ;
 	background-color: #f9f9f9;
 }
 /* Header Section */
@@ -110,7 +111,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	padding: 0;
 	margin-bottom: 80px;
 	background: url(../img/header.jpg) no-repeat right top;
-	background-color: #e5e5e5;
+	background-color: #EEEEEE;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -169,7 +170,6 @@ ol.type li a:hover {
 	z-index: 1
 }
 .isotope, .isotope .isotope-item {
-	/* change duration value to whatever you like */
 	-webkit-transition-duration: 0.8s;
 	-moz-transition-duration: 0.8s;
 	transition-duration: 0.8s;
@@ -215,7 +215,7 @@ ol.type li a:hover {
 	height: 100%;
 	width: 100%;
 	opacity: 0;
-	transition: all 1.5s;
+	transition: all 1s;
 }
 .hover-bg .hover-text .overlay-caption {
 	display: table;
