--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ p.intro {
 	line-height: 24px;
 }
 a {
-	color: #222;
+	color: #666;
 }
 a:hover, a:focus {
 	text-decoration: none;
@@ -140,15 +140,17 @@ header .intro-text {
 	margin-bottom: 80px;
 }
 ul.cat li {
-	display: inline-block;
+	display: inline-flex;
 }
 ol.type li {
-	display: inline-block;
+	display: inline-flex;
 	margin-right: 20px;
+	margin-top: 3px;
+	margin-bottom: 3px;
 }
 ol.type li a {
 	font-family: 'Montserrat', sans-serif;
-	color: rgb(185, 185, 185);
+	color: #444;
 	font-size: 14px;
 	padding: 10px 20px;
 	border: 2px solid #444;
@@ -283,7 +285,7 @@ label {
 	font-size: 15px;
 	font-weight: 400;
 	line-height: 1.42857143;
-	color: #aaa;
+	color: #666;
 	background-color: #444;
 	background-image: none;
 	border: 0;
@@ -327,7 +329,7 @@ color: #777;
 }
 #contact .btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active {
 	background-color: #666;
-	color: #999;
+	color: #white;
 }
 /* Footer Section*/
 #footer {
